# DRL-robot-navigation

./: .gitignore  .gitmodules  README.md
.devcontainer/: Dockerfile  devcontainer.json
TD3/: gazebo_env.py  test_td3.py  train_td3.py
TD3/assets/: multi_robot_scenario.launch
catkin_ws/src/multi_robot_scenario/launch/: robot.gazebo.launch
src/TD3/: CMakeLists.txt  package.xml  setup.py
src/TD3/config/: td3_config.yaml
src/TD3/launch/: empty_world.launch  robot.gazebo.launch  start_simulation.launch  test_td3.launch  train_td3.launch  train_td3.launch.py
src/TD3/rviz/: turtlebot3.rviz
src/TD3/scripts/: gazebo_env.py  test_td3.py  train_td3.py
src/TD3/td3_rl/: gazebo_env.py  test_td3.py  tmp.py
