<?xml version="1.0"?>
<package format="2">
  <name>td3_rl</name>
  <version>0.1.0</version>
  <description>TD3 Reinforcement Learning integrated with ROS and Gazebo</description>
  <maintainer email="gilberttanner.contact@gmail.com">Gilbert Tanner</maintainer>
  <license>BSD</license>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>message_generation</depend>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_make</buildtool_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
